updated .htaccess and ngnix.conf files, added clear.sh to cleaning temporary files

--- a/example.nginx.conf
+++ b/example.nginx.conf
@@ -1,21 +1,21 @@
 
-# Replace the obullo.com with your domain or local hostname.
+# Replace the example.com with your domain or local hostname.
 
 server {
         limit_conn   myzone  10;
         listen       80;
-        server_name  obullo.com www.obullo.com;
+        server_name  example.com www.example.com;
 
         #charset utf-8;
 
-        access_log  /var/www/obullo.com/log/host.access.log  main;
-        error_log   /var/www/obullo.com/log/host.error.log;
+        access_log  /var/www/example.com/log/host.access.log  main;
+        error_log   /var/www/example.com/log/host.error.log;
 
-        root   /var/www/obullo.com/public;
+        root   /var/www/example.com/public;
         index  index.php index.html index.htm;
 
-        # START OBULLO FRAMEWORK REWRITE RULES
-        # ( Obullo URI_PROTOCOL should be REQUEST_URI
+        # START THE FRAMEWORK REWRITE RULES
+        # ( URI_PROTOCOL should be REQUEST_URI
         # / application /config / uri_protocol = REQUEST_URI )
 
         # enforce NO www
@@ -25,7 +25,7 @@ server {
                 rewrite ^/(.*)$ $scheme://$host_without_www/$1 permanent;
         }
 
-        # canonicalize Obullo url end points
+        # canonicalize url end points
         # if your default controller is something other than "welcome" you should change the following
         if ($request_uri ~* ^(/welcome(/index)?|/index(.php)?)/?$)
         {
@@ -44,7 +44,7 @@ server {
                 rewrite ^/(.+)/$ /$1 permanent;
         }
 
-        # removes access to "obullo" folder, also allows a "System.php" controller
+        # removes access to "obullo" folder
         if ($request_uri ~* ^/obullo)
         {
                 rewrite ^/(.*)$ /index.php?/$1 last;
@@ -58,7 +58,7 @@ server {
                 break;
         }
 
-        # END OBULLO FRAMEWORK REWRITE RULES
+        # END FRAMEWORK REWRITE RULES
 
         # error_page  404              /404.html;
         # location = /404.html {
@@ -83,7 +83,7 @@ server {
         location ~ \.php$ {
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  index.php;
-            fastcgi_param  SCRIPT_FILENAME /var/www/obullo.com/public/$fastcgi_script_name;
+            fastcgi_param  SCRIPT_FILENAME /var/www/example.com/public/$fastcgi_script_name;
             include        fastcgi_params;
         }
 
@@ -91,6 +91,12 @@ server {
         # concurs with nginx's one
         #
         location ~ /\.ht {
+            deny  all;
+        }
+
+        # deny access to .sh files
+        #
+        location ~ /\.sh {
             deny  all;
         }
     }
