--- a/example.nginx.conf
+++ b/example.nginx.conf
@@ -15,8 +15,7 @@ server {
         index  index.php index.html index.htm;
 
         # START THE FRAMEWORK REWRITE RULES
-        # ( URI_PROTOCOL should be REQUEST_URI
-        # / application /config / uri_protocol = REQUEST_URI )
+        # ( URI_PROTOCOL should be REQUEST_URI OR AUTO / application /config / uri_protocol = REQUEST_URI )
 
         # enforce NO www
         if ($host ~* ^www\.(.*))
