--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "application"]
-	path = application
-	url = git@github.com:obullo/application.git
+[submodule "app"]
+	path = app
+	url = git@github.com:obullo/app.git
 [submodule "obullo"]
 	path = obullo
 	url = git@github.com:obullo/obullo.git
