added new file called export.sh to project export operations !

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 *.swp
 *.swo
 *.un~
+/export_2012-06-27_17-42/nbproject/private/
+/export_2012-06-27_17-50/nbproject/private/
+/export_2012-06-27_18-11/nbproject/private/
+/export_2012-06-27_18-11/export_2012-06-27_18-11/framework/nbproject/private/
+/export_2012-06-27_18-11/export_2012-06-27_18-11/nbproject/private/
+/export_2012-06-27_18-13/nbproject/private/
+/export_2012-06-28_15-30/nbproject/private/
+/export_2012-06-28_15-45/nbproject/private/
