fixed loaing layout bug in view library

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /export_2012-06-27_18-13/nbproject/private/
 /export_2012-06-28_15-30/nbproject/private/
 /export_2012-06-28_15-45/nbproject/private/
+/export_2012-06-28_17-52/nbproject/private/
