updated sub backend

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /export_2012-06-28_15-30/nbproject/private/
 /export_2012-06-28_15-45/nbproject/private/
 /export_2012-06-28_17-52/nbproject/private/
+/nbproject/private/
