--- a/example.nginx.conf
+++ b/example.nginx.conf
@@ -2,7 +2,6 @@
 # Replace the example.com with your domain or local hostname.
 
 server {
-        limit_conn   myzone  10;
         listen       80;
         server_name  example.com www.example.com;
 
@@ -82,7 +81,7 @@ server {
         location ~ \.php$ {
             fastcgi_pass   127.0.0.1:9000;
             fastcgi_index  index.php;
-            fastcgi_param  SCRIPT_FILENAME /var/www/example.com/public/$fastcgi_script_name;
+            fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include        fastcgi_params;
         }
 
