--- a/example.nginx.conf
+++ b/example.nginx.conf
@@ -13,6 +13,12 @@ server {
         root   /var/www/example.com/public;
         index  index.php index.html index.htm;
 
+        # may want to specify some additional configuration for static files
+        #location ~ \.(js|css|png|gif|jpg|ico|jpeg|woff|ttf|eot|ogg|mp3)
+        #{
+        #     expires 30d;
+        #}
+
         # START THE FRAMEWORK REWRITE RULES
         # ( URI_PROTOCOL should be REQUEST_URI OR AUTO / app /config / uri_protocol = REQUEST_URI )
 
